Update jboss installation to eap 6.1.0-Alpha1
* This is in fact jboss 7.2-Final