@@ -55,7 +55,7 @@ if [ "x$JAVA" = "x" ]; then
 fi
 
 #JPDA options. Uncomment and modify as appropriate to enable remote debugging .
-#JAVA_OPTS="-classic -Xdebug -Xnoagent -Djava.compiler=NONE -Xrunjdwp:transport=dt_socket,address=8787,server=y,suspend=y $JAVA_OPTS"
+#JAVA_OPTS="-classic -Xdebug -Xnoagent -Djava.compiler=NONE -agentlib:jdwp=transport=dt_socket,address=8787,server=y,suspend=y $JAVA_OPTS"
 
 # Setup JBoss sepecific properties
 JAVA_OPTS="$JAVA_OPTS"
@@ -68,8 +68,7 @@ fi
 
 # Execute the command
 eval \"$JAVA\" $JAVA_OPTS \
-    \"-Djava.endorsed.dirs=$JBOSS_HOME/modules/com/sun/xml/bind/main:$JBOSS_HOME/modules/javax/xml/ws/api/main\" \
     -jar \"$JBOSS_HOME/jboss-modules.jar\" \
     -mp \"$JBOSS_HOME/modules\" \
     org.jboss.ws.tools.wsprovide \
-    "$@"
+    '"$@"'
